# contact-predictive-world-models

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh  run_all_half1.sh  run_all_half2.sh  run_cloud_half2.sh  run_debug.sh
cpwm/: __init__.py  analysis_contact_probe.py  analysis_dynamics_summary.py  analysis_tactile_error.py  eval_dreamer.py  eval_ppo.py  plot_results.py  train_dreamer.py  train_ppo.py
embodied/agents/dreamerv3/: agent.py  configs.yaml  train.py
embodied/run/: __init__.py
humanoid_bench/: env.py  wrappers.py
humanoid_bench/assets/envs/: h1touch_pos_run.xml  h1touch_pos_walk.xml
humanoid_bench/envs/: locomotion.py
setup/: setup_env.sh
