[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contact-predictive-world-models"
version = "0.1.0"
description = "Contact Predictive World Models for tactile humanoid manipulation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cpwm*", "embodied*", "humanoid_bench*"]
namespaces = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"embodied.agents.dreamerv3" = ["configs.yaml"]
"humanoid_bench" = ["assets/**/*"]
